# sixwt

./: .gitignore  .pylintrc  .pylintrc_features  CONTRIBUTORS.md  README.md  clean.sh  noxfile.py  pyproject.toml
.github/workflows/: run_tests.yml
contrib/: git_config.sh  sixwt.conf
features/: environment.py  init.feature
features/data/: sixwt.conf
features/steps/: executable_steps.py  utils.py
sixwt/: __main__.py  _version.py
sixwt/character/: character.py  guide.py  parser.py
sixwt/core/: configuration.py  utils.py
sixwt/example/: catalog.py
sixwt/storage/: database.py
sixwt/ui/: wizard.py
