[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "sixwt"
description = "Sixth World Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docopt",
    "tabulate",
    "transitions",
    "InquirerPy",
    'importlib-metadata; python_version>="3.10"',
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["transitions[diagrams]",]

[tool.setuptools_scm]
write_to = "sixwt/_version.py"

[tool.setuptools.packages.find]
include = ["sixwt*"]

[project.scripts]
sixwt = "sixwt.__main__:main"
